<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"

    android:layout_alignParentStart="true"
        tools:ignore="UselessParent">
        <LinearLayout
             android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#C6C6C6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/back">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/logo"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/learn_skills"
                            android:textColor="#ffffff"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            />

                    </LinearLayout>
                     
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="215dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        >

                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="135dp"
                             android:orientation="horizontal"
                             android:layout_marginBottom="10dp"
                             >
                          
                             <androidx.cardview.widget.CardView
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:layout_marginRight="5dp"
                                 android:orientation="vertical"
                                 android:layout_marginEnd="5dp">
                                 
                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent">
                                     <ImageView
                                         android:layout_width="50dp"
                                         android:id="@+id/imageview1"
                                         android:layout_height="50dp"
                                         android:src="@drawable/freelancing"
                                         android:layout_centerInParent="true"
                                         android:contentDescription="@string/todo" />
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="@string/freelancing"
                                         android:textSize="16sp"
                                         android:layout_below="@+id/imageview1"
                                         android:layout_centerHorizontal="true"
                                         android:layout_marginTop="10dp"
                                         android:layout_marginBottom="10dp" />
                                     <Button
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:id="@+id/buttonfreelance"
                                         android:background="@android:color/transparent"
                                         />

                                 </RelativeLayout>

                                 
                             </androidx.cardview.widget.CardView>
                             <androidx.cardview.widget.CardView
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:layout_marginLeft="5dp"
                                 android:orientation="vertical"
                                 android:layout_marginStart="5dp">

                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent">
                                     <ImageView
                                         android:layout_width="50dp"
                                         android:id="@+id/imageview2"
                                         android:layout_height="50dp"
                                         android:src="@drawable/graphic"
                                         android:layout_centerInParent="true"
                                         android:contentDescription="@string/todo" />
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="@string/graphic_design"
                                         android:textSize="16sp"
                                         android:layout_below="@+id/imageview2"
                                         android:layout_centerHorizontal="true"
                                         android:layout_marginTop="10dp"
                                         android:layout_marginBottom="10dp" />
                                     <Button
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:id="@+id/buttongraphic"
                                         android:background="@android:color/transparent"
                                         />

                                 </RelativeLayout>


                             </androidx.cardview.widget.CardView>

                         </LinearLayout>
                         <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp"
                            >

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_marginRight="5dp"
                                android:orientation="vertical"
                                android:layout_marginEnd="5dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                                    <ImageView
                                        android:layout_width="50dp"
                                        android:id="@+id/imageview3"
                                        android:layout_height="50dp"
                                        android:src="@drawable/dm"
                                        android:layout_centerInParent="true"
                                        android:contentDescription="@string/todo" />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/digital_marketing"
                                        android:textSize="16sp"
                                        android:layout_below="@+id/imageview3"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="10dp" />
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/buttondm"
                                        android:background="@android:color/transparent"
                                        />

                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>
                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_marginLeft="5dp"
                                android:orientation="vertical"
                                android:layout_marginStart="5dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                                    <ImageView
                                        android:layout_width="50dp"
                                        android:id="@+id/imageview4"
                                        android:layout_height="50dp"
                                        android:src="@drawable/creativewriting"
                                        android:layout_centerInParent="true"
                                        android:contentDescription="@string/todo" />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/creative_writing"
                                        android:textSize="16sp"
                                        android:layout_below="@+id/imageview4"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="10dp" />
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/buttoncreative"
                                        android:background="@android:color/transparent"
                                        />

                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>

                        </LinearLayout>
                         <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp"
                            >

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_marginRight="5dp"
                                android:orientation="vertical"
                                android:layout_marginEnd="5dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                                    <ImageView
                                        android:layout_width="50dp"
                                        android:id="@+id/imageview5"
                                        android:layout_height="50dp"
                                        android:src="@drawable/ceo"
                                        android:layout_centerInParent="true"
                                        android:contentDescription="@string/todo" />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/seo"
                                        android:textSize="16sp"
                                        android:layout_below="@+id/imageview5"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="10dp" />
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/buttonceo"
                                        android:background="@android:color/transparent"
                                        />

                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>
                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_marginLeft="5dp"
                                android:orientation="vertical"
                                android:layout_marginStart="5dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                                    <ImageView
                                        android:layout_width="50dp"
                                        android:id="@+id/imageview6"
                                        android:layout_height="50dp"
                                        android:src="@drawable/ecomm"
                                        android:layout_centerInParent="true"
                                        android:contentDescription="@string/todo" />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="E-Commerce"
                                        android:textSize="16sp"
                                        android:layout_below="@+id/imageview6"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="10dp" />
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/buttonecomm"
                                        android:background="@android:color/transparent"
                                        />

                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>

                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>

       </LinearLayout>

    </ScrollView>

</RelativeLayout>